# chip8-rs

./: Cargo.toml  LICENSE  README.md
src/: chip8.rs  main.rs
src/chip8/: audio.rs  font.rs  input.rs  instruction.rs
