[package]
name = "chip8-rs"
version = "0.1.0"
authors = ["Gabriel Leme <gabriel.oliveira.leme@gmail.com>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
cpal = "0.15.3"
env_logger = "0.10"
error-iter = "0.4"
game-loop = { version = "1.0.0", features = ["winit"] }
log = "0.4"
pixels = "0.13"
rand = "0.8.5"
winit = "0.28"
winit_input_helper = "0.14"
